--- a/front-end/src/app/game/answer-list-widget/answer-list-widget.component.scss
+++ b/front-end/src/app/game/answer-list-widget/answer-list-widget.component.scss
@@ -1,42 +1,43 @@
 @import '../../../styles/card.scss';
 @import '../../../styles/common.scss';
 
-.answers-list {
-    width: 100%;
-    height: 100%;
-    margin: auto;
+#container {
+    position: absolute;
+    grid-gap: 1px;
+    box-sizing: border-box; 
+    top: 35%;
+    bottom: 2%;
+    margin-left: 5%;
+    margin-right: 5%;
+    height: 63%; 
+    width: 90%; 
+    background-color: #563d7c; 
     text-align: center;
-    margin: auto;
-    display: table;
+    display: grid; 
+    grid-template-columns: repeat( auto-fit, minmax(49%, 1fr) );
 }
 
-.grid { // ok pour le moment mais faudrait le rendre plus générique
-    margin-top: 2rem;
-    display: grid;
-    grid-template-columns: repeat(2, minmax(50%, 1fr));
-    grid-gap: 10px;
-    grid-auto-rows: 50%;
-}
 // Lien utile : https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Auto-placement_in_CSS_Grid_Layout
 
 .shazamButton {
-    /*position: fixed;
-    bottom: -9rem;
-    left: 0;
-    right: 0;*/
+    position: absolute;
+    bottom: 5%;
+    left: 20%;
+    right: 20%;
     background-color: rgb(38, 139, 255);//default
-    border-radius: 75px;
-    height: 7rem;
-    line-height: 7rem;//to vertically center
-    margin: auto;
-    width: 16rem;
+    border-radius: 10rem;
+    height: 10%;
+    width: 40%;//16rem;
     padding: auto;
+    margin: auto;
     text-align: center;
-    font-size: 3rem;
+    font-size: 200%;//3rem;
     font-weight: bold;
     color: white;
     box-shadow: 0 6px 10px rgba(33, 34, 65, 0.2), 0 0 6px rgba(57, 44, 88, 0.15);
-    margin-top: 2rem;
+    display: flex;
+    justify-content: center; /*horizontal centering*/
+    align-items:center;     /*vertical centering*/
 }
 
 .shazamButton:hover {
