--- a/front-end/src/app/game/recap/recap.component.scss
+++ b/front-end/src/app/game/recap/recap.component.scss
@@ -4,47 +4,43 @@
 @import '../../../styles/common.scss';
 
 
-/*
-.box {
-    @extend .vertical-layout;
-    @extend .center;
-    width: fit-content;
+#questionQuiz {
+    position: absolute;
+    left: 5%;
+    right: 5%;
+    margin-top: auto;
+    background-color: rgb(255, 206, 206);  
+    height: 35%;
+    display: flex;
+    justify-content: center; /*horizontal centering*/
+    align-items:center; /*vertical centering*/
+    text-align: center;
+}
+
+img {
     margin: auto;
-    padding: 10px;
-    text-align: center;
-    margin-top: 2rem;
-}*/
-
-.questionAndImage {
-    text-align: center;
+    max-width: 100%;
+    max-height: 100%;
+    display: block;      /* remove extra space below image */
+    @extend .thumbnailItem;
 }
 
-.frame {
-    height: 8rem;
-    width: 12rem;
+.thumbnailItem {
+    width: 13rem;
+    height: 9rem;
+    object-fit: cover;
 }
 
-.button-card {
+.bigImg {
+    @extend img;
     width: 15rem;
-    height: 8rem;
+    height: 11rem;
 }
 
-.place-button {
-    position: fixed;
+.textItem {
+    font-size: 200%;
 }
 
-.button-end {
-    @extend .button-purple-theme;
-    height: 7rem;
-    line-height: 7rem;
-    width: 15rem;
-    text-align: center;
-    font-size: 3rem;
-    margin-top: 1rem;
-    margin-left: auto;
-    margin-right: auto;
-    /*position: fixed;
-    bottom: 5rem;
-    left: 12rem;*/
-    //right: 10rem;
+.textItemAlone {
+    font-size: 250%;
 }
