--- a/front-end/src/app/game/selected-vs-right-answer/selected-vs-right-answer.component.scss
+++ b/front-end/src/app/game/selected-vs-right-answer/selected-vs-right-answer.component.scss
@@ -1,30 +1,40 @@
 @import '../../../styles/images.scss';
 @import '../../../styles/layout.scss';
 
-/*
-.box-answers {
-    //margin-top: auto
-    margin-bottom: auto;
-    margin-top: auto;
-    margin-top: 1em;
-    border-style: solid;
-    border-color:  rgb(179, 11, 89);
-    display: flex;
-    flex-wrap: wrap;
+#container-compare {
+    position: absolute;
+    grid-gap: 2em;
+    box-sizing: border-box; 
+    top: 35%;
+    bottom: 2%;
+    left: 5%;
+    right: 5%;
+    height: 63%; 
+    width: 90%; 
+    background-color: #563d7c; 
     text-align: center;
-}*/
-
-.separation{
-    width:5px;
-    border-left:1px solid gray;
+    display: flex;
+    justify-content: center; /*horizontal centering*/
+    align-items:center; /*vertical centering*/
+    flex-direction: row;
 }
 
-.victory-message{
-    color: purple;
-    font-weight: bold;
-    font-family: futura;
-    font-style: italic;
+#correct-choice {
+    position: absolute;
+    grid-gap: 2em;
+    box-sizing: border-box; 
+    top: 35%;
+    bottom: 2%;
+    left: 5%;
+    right: 5%;
+    height: 63%; 
+    width: 90%; 
+    background-color: #563d7c; 
     text-align: center;
+    display: flex;
+    justify-content: center; /*horizontal centering*/
+    align-items:center; /*vertical centering*/
+    flex-direction: column;
 }
 
 .frame {
@@ -32,23 +42,35 @@
     height: 15rem;
 }
 
-.givenAnswer {
-    margin-right: 1rem;
-}
-
-.rightAnswer {
-    margin-left: 1rem;
-}
-
-.vsBlock {
-    text-align: center;
-}
-
-.italic {
-    font-style: italic;
+.txt-small {
+    font-size: 1.5rem;
 }
 
 .txtAns {
     font-weight: bold;
     font-size: 2rem;
+}
+
+.givenAnswer {
+    text-align: center;
+    background-color: palevioletred;
+    width: 100%;
+}
+
+.separation{
+    width: 5%;
+    border-left: 5px solid black;
+}
+
+.rightAnswer {
+    text-align: center;
+    background-color: palevioletred;
+    width: 100%;
+}
+
+.victory-message{
+    color: rgb(0, 152, 240); 
+    font-weight: bold;
+    font-size: 1.5em;
+    text-align: center;
 }
