--- a/front-end/src/app/game/runner/runner.component.scss
+++ b/front-end/src/app/game/runner/runner.component.scss
@@ -20,10 +20,10 @@
     position: absolute;
     left: 20%;
     right: 20%;
-    //background-color: rgb(255, 206, 206);  
-    top: 35%;
-    bottom: 35%;
-    height: 30%;
+    top: 40%;
+    bottom: 40%;
+    height: 20%;
+    max-height: 8rem;
     display: flex;
     justify-content: center; /*horizontal centering*/
     align-items:center; /*vertical centering*/
