petit clean quiz play + rm useless newthemeBtn + position: fixed; for settings btn

--- a/front-end/src/app/core/themes/theme-list/theme-list.component.html
+++ b/front-end/src/app/core/themes/theme-list/theme-list.component.html
@@ -7,9 +7,10 @@
 </div>
 
 <div class="main">
+    <!--
     <div class="new-button" (click)="modalService.open(themeFormModal)"> 
         <i class="fas fa-plus-circle"></i> Nouveau Thème
-    </div>
+    </div>-->
     <!--<theme-form></theme-form>-->
     <div class = "theme-list" *ngIf = "THEME_LIST">
         <div class="theme-card" *ngFor = "let theme of THEME_LIST">
