--- a/front-end/src/app/core/quizzes/timer-form-modal/timer-form-modal.component.scss
+++ b/front-end/src/app/core/quizzes/timer-form-modal/timer-form-modal.component.scss
@@ -3,6 +3,10 @@
 @import 'src/styles/images.scss';
 @import '../../../../styles/common.scss';
 
+#settingsBtn {
+    position: fixed;
+    left: 2%;
+}
 
 .timer{
     text-align: center;
