btn new+theme different color now

--- a/front-end/src/app/core/quizzes/timer-form-modal/timer-form-modal.component.html
+++ b/front-end/src/app/core/quizzes/timer-form-modal/timer-form-modal.component.html
@@ -1,4 +1,4 @@
-<div id="settingsBtn" class="btn btn-info" (click)="modalService.open(timerFormModal)"> 
+<div id="settingsBtn" class="btn btn-secondary" (click)="modalService.open(timerFormModal)"> 
     <i class="fas fa-cogs"></i> Paramètres
 </div>
 <ng-template #timerFormModal let-modal>
