--- a/front-end/src/styles/variables.scss
+++ b/front-end/src/styles/variables.scss
@@ -1,5 +1,5 @@
 $app-background-color: #f2f2f2;
-$blue: #3f51b5;
+//$blue: #3f51b5;
 $magenta: #903fb5;
 
 
@@ -8,4 +8,13 @@ $very-light-purple: rgb(216, 167, 255);
 $light-purple:      rgb(151, 87, 255);
 $purple:            rgb(92, 0, 212);
 $deep-purple:       rgb(69, 0, 158);
+
+$very-light-blue:   rgb(95, 129, 192);
+$blue:              rgb(12, 119, 207);//rgb(0, 173, 189);
+$deep-blue:         rgb(43, 59, 199);
+
+$light-grey:        rgb(122, 122, 122);
+$grey:              rgb(122, 122, 122);
+$dark-grey:         rgb(68, 68, 68);
+
 
